[metadata]
name = parambokeh
version = attr: param.version.get_setupcfg_version
description = ParamBokeh provides an easy way to generate a UI for param based classes in the notebook or on bokeh server.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Development Status :: 4 - Beta
author = PyViz
author_email = holoviews@gmail.com
maintainer = PyViz
maintainer_email = holoviews@gmail.com
url = https://ioam.github.io/parambokeh
project_urls =
    Bug Tracker = https://github.com/ioam/parambokeh/issues
    Documentation = https://ioam.github.io/parambokeh
    Source Code = https://github.com/ioam/parambokeh


[options]
include_package_data = True
packages = find:
python_requires = >=2.7
install_requires =
    param >=1.6.1
    bokeh >=0.12.10
    pyviz_comms

[options.extras_require]
tests =
    nbsmoke >=0.2.6
    flake8
    pytest >=2.8.5

examples =
    pyct
    holoviews >=1.9.0
    pandas
    jupyter
    pyparsing

doc =
    nbsite
    sphinx_ioam_theme

[options.entry_points]
console_scripts =
    parambokeh = parambokeh.__main__:main

[wheel]
universal = 1

[tool:autover.configparser_workaround.archive_commit=$Format:%h$]
